Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112256

qdoc should warn about documented global functions that do not use \relates

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.1, 6.6.0
    • 6.5
    • Build tools: qdoc
    • None
    • 65e94d012 (dev), 9f6df74a6 (6.5)
    • DaVinci 76

    Description

      When generating qch docs (ninja qch_docs) on Qt documentation, qhelpgenerator reports following issues:

      qt5/doc/qtqmlmodels/qtqmlmodels.qhp:146: Missing attribute in <keyword name="operator<<">
      qt5/doc/qtqml/qtqml.qhp:279: Missing attribute in <keyword name="QML_SEQUENTIAL_CONTAINER">.
      qt5/doc/qtgui/qtgui.qhp:5085: Missing attribute in <keyword name="qHash">.
      qt5/doc/qtcore/qtcore.qhp:1075: Missing attribute in <keyword name="MetaObjectFlags">.
      qt5/doc/qtcore/qtcore.qhp:8064: Missing attribute in <keyword name="operator+=">.
      qt5/doc/qtcore/qtcore.qhp:8978: Missing attribute in <keyword name="qt_win_hasPackageIdentity">.
      qt5/doc/qtprotobuf/qtprotobuf.qhp:91: Missing attribute in <keyword name="qRegisterProtobufEnumType">.
      qt5/doc/qtprotobuf/qtprotobuf.qhp:92: Missing attribute in <keyword name="qRegisterProtobufMapType">.
      qt5/doc/qtprotobuf/qtprotobuf.qhp:93: Missing attribute in <keyword name="qRegisterProtobufType">.
      qt5/doc/qtprotobuf/qtprotobuf.qhp:94: Missing attribute in <keyword name="qRegisterProtobufTypes">.
      

      This happens because these are documented functions/macros in the global scope not associated with anything using \relates, so their docs are not generated and they end up with an empty ref attribute in the .qhp file.

      QDoc doesn't warn about documented functions that generate no docs.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes